welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:8: error: not found: type color
 def carre(c:color) {
             ^FlowerPot:12: error: not found: type color
 def pistil(c:color) {
              ^